# NUM-wino

./: .gitignore  Home.py  Makefile  README.md  pyproject.toml
.dvc/: config
analytics/: utils.py
analytics/cli/: app.py
analytics/notebooks/: playground.ipynb
data/input/: .gitignore  WinePrices.csv.dvc
data/models/: .gitignore  RFR.p.dvc  RFR_METADATA.dvc
data/output/: .gitignore  trends.dvc
data/prepared/: .gitignore  X_test.dvc  X_train.dvc  y_test.dvc  y_train.dvc
pages/: calculate_price.py  show_trends.py
src/: train.py  utils.py
src/cli/: app.py
src/config/: default.yaml  paths.py
src/pipeline/: evaluate.py  prepare.py  train.py  trends.py
