[tool.poetry]
name = "num-wino"
version = "0.1.0"
description = ""
authors = ["Adam Gorgon <Ag0r@protonmail.com>"]
readme = "README.md"
packages = [{include = "num_wino"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.2"
streamlit = "^1.23.1"
scikit-learn = "^1.2.2"
mlflow = "^2.4.1"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
notebook = "^6.5.4"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
